# pomodoro

./: Makefile  README.md  pomodoro_pw  pomodoro_pw.c
cli/: pomodoro_cli.c
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt  lib_pomodoro.h
lib/include/pomodoro_en/: Tmonitoring_callback.h  Tpomodoro.h  Tpomodoro_cfg.h  Tpomodoro_stage.h  Tpomodoro_state.h  pomodoro_en.h  tests_helper_functions.h
lib/src/: CMakeLists.txt  Tclock.cpp  Tclock.h  Tpomodoro.cpp  Tpomodoro.h  Tpomodoro_cfg.cpp  Tpomodoro_cfg.h  Tpomodoro_state.cpp  Tpomodoro_state.h  cfg_obj.cpp  read_cfg.cpp  tests_helper_functions.cpp  tests_helper_functions.h  tests_helper_functions_Tpomodoro.cpp  tests_helper_functions_Tpomodoro_cfg.cpp  tests_helper_functions_Tpomodoro_state.cpp
lib/test/: CMakeLists.txt  test_Tpomodoro.cpp  test_Tpomodoro_cfg.cpp  test_Tpomodoro_state.cpp  test_cfg_obj.cpp  test_read_cfg.cpp
lib/tests/: CMakeLists.txt  test_Tpomodoro.cpp  test_Tpomodoro_cfg.cpp  test_Tpomodoro_state.cpp
lib/tests_google/: CMakeLists.txt  test_Tpomodoro.cpp  test_Tpomodoro_cfg.cpp  test_Tpomodoro_state.cpp
qt/: CMakeLists.txt  main.cpp  mainwindow.ui  pomodoro_pl_PL.ts
